# auto-inquiry-form-submitter

./: .claude-code-settings.json  .env.example  .env.prod.example  .env.test  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  playwright.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  cd.yml  ci.yml  security.yml
.kiro/commands/: kiro:spec-design.md  kiro:spec-init.md  kiro:spec-requirements.md  kiro:spec-status.md  kiro:spec-tasks.md  kiro:steering-custom.md  kiro:steering.md
.kiro/hooks/: post-command.sh  pre-command.sh  preserve-context.sh
.kiro/steering/: product.md  structure.md  tech.md
backend/: .dockerignore  .env.example  .env.sample  CELERY_SETUP.md  Dockerfile  Dockerfile.prod  alembic.ini  celery_beat.py  celery_worker.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  create_test_user.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_api.py  test_docker.sh  test_template_fix.py
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 2025072801_add_form_detection_status.py  bf159aabd1f3_initial_migration.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  companies.py  compliance.py  deps.py  forms.py  schedules.py  submissions.py  tasks.py  templates.py
backend/app/core/: celery_app.py  compliance.py  config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  company.py  form.py  schedule.py  submission.py  template.py  user.py
backend/app/schemas/: __init__.py  company.py  form.py  schedule.py  submission.py  task.py  template.py  user.py
backend/app/services/: browser_pool.py  form_detector.py  form_submitter.py  template_processor.py
backend/app/tasks/: __init__.py  batch_tasks.py  form_tasks.py  schedule_tasks.py
backend/tests/: conftest.py  test_api_security.py  test_app.py  test_auth.py  test_browser_pool.py  test_celery_tasks.py  test_companies.py  test_compliance.py  test_db_config.py  test_form_detector.py  test_security.py  test_templates.py
e2e/fixtures/: auth.fixture.ts
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
k8s/: README.md  deploy.sh
(+76 files in other folders)
